# project1_Bakoev_Faridun

./: README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
